# 指定cmake最低编译版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(main)
ADD_SUBDIRECTORY(src)  # 指明本项目包含一个子目录

MESSAGE(STATUS "PROJECT_BINARY_DIR " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "PROJECT_SOURCE_DIR " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "CMAKE_BINARY_DIR " ${CMAKE_BINARY_DIR})
MESSAGE(STATUS "CMAKE_SOURCE_DIR " ${CMAKE_SOURCE_DIR})


#指定头文件目录位置
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(main ${DIR_SRCS})
TARGET_LINK_LIBRARIES(main Test)  # 指明可执行文件main需要连接一个名为Test的链接库